# Rust_task_manager

./: .env  Cargo.toml  README.md
src/: main.rs
src/controllers/: task_controller.rs  user_controller.rs
src/db/: db.rs
src/middlewares/: auth_middleware.rs
src/models/: task_model.rs  user_model.rs
src/routes/: task_routes.rs  user_routes.rs
src/utils/: jwt.rs
