[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.1"
bson = { version = "3.0.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
lazy_static = "1.4"
mongodb = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
uuid = "1.18.1"
